# Bildungsurlaub_AIengineering

./: .gitignore  pyproject.toml  torch_test.py
D01_Intro/010__NN_from_scratch/: nn_scratch_end.py
D03_ComputerVision/MulticlassClassification/: Cnn_MulticlassClassification_end.py
D04_LLMs/: 20_chat_ollama.py  50_parallel_chain.py
tasks/: plan.md  todo.md
unsere_skripte/: RegressionModel.onnx  RegressionModel.onnx.data  RegressionModel.pt  regression.py  regression_load_model.py  umgang_mit_tensoren.py
unsere_skripte/_archiv/: california_housing_reg.py  chat_openrouter.py  hf_image_classification.py  multiclass_classification.py
unsere_skripte/_archiv/computer_vision/: binary_classification_img.py  preprocessing.py  transfer_learning.py
unsere_skripte/_archiv/first_model/: FirstModel.ckpt  FirstModel.pt  FirstModelLightning.ckpt  data_prep.py  inference.py  model_lightning.pt  model_marimo.py  modeling_lightning.py  modeling_pl.py  modeling_tensorboard.py  modeling_wandb.py
unsere_skripte/_archiv/first_model/lightning_logs/version_0/: events.out.tfevents.1778221542.LAPTOP-TMC9KG9B.19732.0  events.out.tfevents.1778221618.LAPTOP-TMC9KG9B.19732.1  hparams.yaml
unsere_skripte/_archiv/first_model/runs/: events.out.tfevents.1778246864.LAPTOP-TMC9KG9B.37132.0  events.out.tfevents.1778247818.LAPTOP-TMC9KG9B.37132.1  events.out.tfevents.1778247949.LAPTOP-TMC9KG9B.37132.2  events.out.tfevents.1778247989.LAPTOP-TMC9KG9B.37132.3
unsere_skripte/_archiv/timeseries/: data_prep.py  modeling.py
(+12 files in other folders)
